--- a/project/slides/preliminary/preliminary.tex
+++ b/project/slides/preliminary/preliminary.tex
@@ -39,15 +39,16 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Data Collection}
+\begin{frame}{The Dataset}
 \begin{itemize}
-    \item Introduce your network discussing its nodes and links
+    \item Tell us how you wil collect the data and estimate the size of the
+network
     \item ?
     \item ?
 \end{itemize}
 \end{frame}
 
-\begin{frame}{Questions}
+\begin{frame}{Possible Questions}
 \begin{itemize}
     \item Tell us what questions you are planning to ask
     \item ?
