--- a/brazil_sales_marketplace_olist.ipynb
+++ b/brazil_sales_marketplace_olist.ipynb
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -1198,7 +1200,7 @@
    "id": "311dc568",
    "metadata": {},
    "source": [
-    "## Bringing location information"
+    "# Location information"
    ]
   },
   {
@@ -1211,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "690dfdca",
    "metadata": {},
    "outputs": [
@@ -1304,7 +1306,7 @@
        "4                     13056               campinas             SP  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "5c463e25",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "ec3c373b",
    "metadata": {},
    "outputs": [
@@ -1400,7 +1402,7 @@
        "4  4f2d8ab171c80ec8364f7c12e35b23ad               campinas             SP"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "0fee9426",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1526,7 @@
        "4              santo andre             SP  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1538,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "4d5a55f5",
    "metadata": {},
    "outputs": [
@@ -1555,7 +1557,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "f57a7934",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "72230157",
    "metadata": {},
    "outputs": [
@@ -1603,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "3d74054e",
    "metadata": {},
    "outputs": [
@@ -1621,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "id": "eb8d6902",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "id": "492e235c",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1675,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>product_category_name</th>\n",
-       "      <th>customer_state</th>\n",
+       "      <th>state</th>\n",
        "      <th>mean_price (R$)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1750,23 +1752,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          product_category_name customer_state  mean_price (R$)\n",
-       "0     agro_industria_e_comercio             AL          1476.30\n",
-       "1     agro_industria_e_comercio             AP           589.99\n",
-       "2     agro_industria_e_comercio             BA           451.40\n",
-       "3     agro_industria_e_comercio             CE            75.48\n",
-       "4     agro_industria_e_comercio             ES           221.15\n",
-       "...                         ...            ...              ...\n",
-       "1357      utilidades_domesticas             RS            89.43\n",
-       "1358      utilidades_domesticas             SC           103.79\n",
-       "1359      utilidades_domesticas             SE           126.75\n",
-       "1360      utilidades_domesticas             SP            84.69\n",
-       "1361      utilidades_domesticas             TO            71.24\n",
+       "          product_category_name state  mean_price (R$)\n",
+       "0     agro_industria_e_comercio    AL          1476.30\n",
+       "1     agro_industria_e_comercio    AP           589.99\n",
+       "2     agro_industria_e_comercio    BA           451.40\n",
+       "3     agro_industria_e_comercio    CE            75.48\n",
+       "4     agro_industria_e_comercio    ES           221.15\n",
+       "...                         ...   ...              ...\n",
+       "1357      utilidades_domesticas    RS            89.43\n",
+       "1358      utilidades_domesticas    SC           103.79\n",
+       "1359      utilidades_domesticas    SE           126.75\n",
+       "1360      utilidades_domesticas    SP            84.69\n",
+       "1361      utilidades_domesticas    TO            71.24\n",
        "\n",
        "[1362 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,8 +1777,8 @@
     "# grouping information\n",
     "final_dataframe = orders_final_2.groupby(['product_category_name','customer_state'])['price'].mean().to_frame().reset_index()\n",
     "\n",
-    "#Rename price column\n",
-    "final_dataframe.rename(columns = {'price': 'mean_price (R$)'}, inplace = True)\n",
+    "#Rename price and customer state columns\n",
+    "final_dataframe.rename(columns = {'price': 'mean_price (R$)', 'customer_state' : 'state'}, inplace = True)\n",
     "\n",
     "#Rounding the price to two decimal places\n",
     "final_dataframe['mean_price (R$)'] = final_dataframe['mean_price (R$)'].apply(lambda x : round(x,2))\n",
@@ -1786,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "id": "ad605410",
    "metadata": {},
    "outputs": [],
@@ -1795,9 +1797,309 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fb234720",
+   "metadata": {},
+   "source": [
+    "## Population dataset\n",
+    "\n",
+    "This dataset has the total population for each state in 2016, 2017 and 2018\n",
+    "\n",
+    "Sources:\n",
+    "* 2016 - https://g1.globo.com/economia/noticia/2016/08/brasil-tem-mais-de-206-milhoes-de-habitantes-segundo-o-ibge.html\n",
+    "* 2017 - https://g1.globo.com/economia/noticia/brasil-tem-mais-de-207-milhoes-de-habitantes-segundo-ibge.ghtml\n",
+    "* 2018 - https://g1.globo.com/economia/noticia/2019/08/28/brasil-atinge-210-milhoes-de-habitantes-diz-ibge.ghtml![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0fd5d857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "population = pd.read_excel('population.xlsx')\n",
+    "\n",
+    "#Removing spaces in state column\n",
+    "population.state = population.state.str.replace(' ', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "440031f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Calculating the average population for each state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "af03e045",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>mean_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AC</td>\n",
+       "      <td>816687</td>\n",
+       "      <td>829619</td>\n",
+       "      <td>869265</td>\n",
+       "      <td>838523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>3358963</td>\n",
+       "      <td>3375823</td>\n",
+       "      <td>3322820</td>\n",
+       "      <td>3352535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AP</td>\n",
+       "      <td>782295</td>\n",
+       "      <td>797722</td>\n",
+       "      <td>829494</td>\n",
+       "      <td>803170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AM</td>\n",
+       "      <td>4001667</td>\n",
+       "      <td>4063614</td>\n",
+       "      <td>4080611</td>\n",
+       "      <td>4048630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BA</td>\n",
+       "      <td>15276566</td>\n",
+       "      <td>15344447</td>\n",
+       "      <td>14812617</td>\n",
+       "      <td>15144543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  state      2016      2017      2018  mean_pop\n",
+       "0    AC    816687    829619    869265    838523\n",
+       "1    AL   3358963   3375823   3322820   3352535\n",
+       "2    AP    782295    797722    829494    803170\n",
+       "3    AM   4001667   4063614   4080611   4048630\n",
+       "4    BA  15276566  15344447  14812617  15144543"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population['mean_pop'] = population.mean(axis = 1)\n",
+    "population['mean_pop'] = population['mean_pop'].apply(lambda x : int(x)) \n",
+    "population.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bd661f5",
+   "metadata": {},
+   "source": [
+    "## Merge population dataset with final_dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "56727508",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "final_dataset = final_dataframe.merge(population.loc[:,['state', 'mean_pop']], how = 'left', on = 'state')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "d70880e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_category_name</th>\n",
+       "      <th>state</th>\n",
+       "      <th>mean_price (R$)</th>\n",
+       "      <th>mean_pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>agro_industria_e_comercio</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>1476.30</td>\n",
+       "      <td>3352535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agro_industria_e_comercio</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>589.99</td>\n",
+       "      <td>803170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agro_industria_e_comercio</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>451.40</td>\n",
+       "      <td>15144543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>agro_industria_e_comercio</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>75.48</td>\n",
+       "      <td>9019924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>agro_industria_e_comercio</td>\n",
+       "      <td>ES</td>\n",
+       "      <td>221.15</td>\n",
+       "      <td>3987480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1357</th>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>89.43</td>\n",
+       "      <td>13111687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1358</th>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>103.79</td>\n",
+       "      <td>6995736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1359</th>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "      <td>SE</td>\n",
+       "      <td>126.75</td>\n",
+       "      <td>2277401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1360</th>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>84.69</td>\n",
+       "      <td>45127833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1361</th>\n",
+       "      <td>utilidades_domesticas</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>71.24</td>\n",
+       "      <td>1546108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1362 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          product_category_name state  mean_price (R$)  mean_pop\n",
+       "0     agro_industria_e_comercio    AL          1476.30   3352535\n",
+       "1     agro_industria_e_comercio    AP           589.99    803170\n",
+       "2     agro_industria_e_comercio    BA           451.40  15144543\n",
+       "3     agro_industria_e_comercio    CE            75.48   9019924\n",
+       "4     agro_industria_e_comercio    ES           221.15   3987480\n",
+       "...                         ...   ...              ...       ...\n",
+       "1357      utilidades_domesticas    RS            89.43  13111687\n",
+       "1358      utilidades_domesticas    SC           103.79   6995736\n",
+       "1359      utilidades_domesticas    SE           126.75   2277401\n",
+       "1360      utilidades_domesticas    SP            84.69  45127833\n",
+       "1361      utilidades_domesticas    TO            71.24   1546108\n",
+       "\n",
+       "[1362 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95965ecb",
+   "id": "12e1346c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1805,7 +2107,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd5d857",
+   "id": "3c41bedd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca0cced4",
    "metadata": {},
    "outputs": [],
    "source": []
