Add datasets folder

--- a/olist/brazil_sales_marketplace_olist.ipynb
+++ b/olist/brazil_sales_marketplace_olist.ipynb
@@ -91,9 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = pd.read_csv('olist_order_items_dataset.csv')\n",
-    "orders = pd.read_csv('olist_orders_dataset.csv')\n",
-    "products = pd.read_csv('olist_products_dataset.csv')"
+    "items = pd.read_csv('datasets/olist_order_items_dataset.csv')\n",
+    "orders = pd.read_csv('datasets/olist_orders_dataset.csv')\n",
+    "products = pd.read_csv('datasets/olist_products_dataset.csv')"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "690dfdca",
    "metadata": {},
    "outputs": [
@@ -1296,13 +1296,13 @@
        "4                     13056               campinas             SP  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer = pd.read_csv('olist_customers_dataset.csv')\n",
+    "customer = pd.read_csv('datasets/olist_customers_dataset.csv')\n",
     "customer.head()"
    ]
   },
@@ -2063,7 +2063,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6f17acdc",
    "metadata": {},
@@ -2085,7 +2084,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "population = pd.read_excel('population.xlsx')\n",
+    "population = pd.read_excel('dataset/population.xlsx')\n",
     "\n",
     "#Removing spaces in state column\n",
     "population.state = population.state.str.replace(' ', '')"
@@ -2856,7 +2855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
